# rca_copilot_agent

./: Copilotプロンプト.md  Copilotプロンプト.txt  README.md  main.py  pyproject.toml  動かし方.txt
app/agent/: rca_agent.py
app/tools/: documents.py  maintenance.py  timeseries.py
docs/: agent_design.md
scripts/: call_rca.ps1
src/: agent.py  app.py  tools.py
src/app/: main.py
src/app/agent/: rca_agent.py
src/app/tools/: documents.py  maintenance.py  timeseries.py
src/data/: maintenance.json
src/data/documents/: incident_001.md
src/rca_copilot_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_documents.py
