[project]
name = "rca-copilot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
    "ipython>=9.10.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]